clean up project files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,15 @@
 [project]
 name = "phoebe-pose"
 version = "0.1.0"
-description = "Add your description here"
+description = "Generate images of Phoebe"
 readme = "README.md"
 authors = [
     { name = "zku" }
 ]
 requires-python = ">=3.10"
 dependencies = [
-    "fastapi[standard]>=0.115.12",
     "google-genai>=1.9.0",
-    "pillow>=11.1.0",
     "python-dotenv>=1.1.0",
-    "rich>=14.0.0",
     "ruff>=0.11.4",
     "streamlit>=1.44.1",
 ]
@@ -29,6 +26,3 @@ line-length = 100
 
 [tool.ruff.format]
 quote-style = "double"
-
-[browser]
-gatherUsageStats = false
