--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,20 +9,16 @@ authors = [
 requires-python = ">=3.10"
 dependencies = [
     "google-genai>=1.9.0",
-    "python-dotenv>=1.1.0",
     "ruff>=0.11.4",
     "streamlit>=1.44.1",
 ]
 
-[project.scripts]
-phoebe-pose = "phoebe_pose:main"
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
 [tool.ruff]
 line-length = 100
 
+[tool.ruff.lint]
+select = ["E", "F", "D", "I"]
+
 [tool.ruff.format]
 quote-style = "double"
+indent-style = "space"
